2005-04-08  David Malcolm  <dmalcolm@redhat.com>

	* plugin-debug.c: 
	Fix warning when plugin is disabled

2005-04-05  David Malcolm  <dmalcolm@redhat.com>

	* cong-util.h: 
	* cong-util.c: 
	Added various utility functions to make it easier to create XML
	files programatically.

	* plugin-debug.c: 
	* cong-fake-plugin-hooks.h: 
	* cong-fake-plugin-hooks.c: 
	* cong-editor-widget3.c: 
	* cong-editor-widget.h: 
	* cong-editor-area.h: 
	* cong-editor-area.c: 
	Added new debug plugin (must be enabled with
	--enable-debug-plugin=yes), which adds a debug item to the Tools
	menu to dump the CongEditorArea tree as XML (and open the
	resulting file).

	* cong-command.c: fixed some API documentation

2005-04-05  David Malcolm  <cmalcolm@redhat.com>

	* Makefile.am: 
	

2005-03-31  David Malcolm  <dmalcolm@redhat.com>

	* cong-app.c, cong-attribute-editor-enumeration.c,
	cong-attribute-editor-nmtoken.c, cong-attribute-editor.c,
	cong-attribute-wrapper.c, cong-command.c, cong-command.h,
	cong-debug-log-view.c, cong-dispspec-element-gxx.h,
	cong-dispspec-element.c, cong-dispspec-registry.c,
	cong-dispspec.c, cong-document.c, cong-document.h,
	cong-dom-view.c, cong-dtd.c, cong-edit-find-and-replace.c,
	cong-editor-area-unknown-tag.c, cong-editor-node-comment.c,
	cong-editor-node-text.c, cong-error-file-save.c,
	cong-file-print.c, cong-file-properties.c, cong-language.c,
	cong-location.c, cong-modification.h,
	cong-node-modification-remove-attribute.c,
	cong-node-modification-set-attribute.c,
	cong-node-modification-set-attribute.h,
	cong-node-modification-set-text.c, cong-node-properties-dialog.c,
	cong-node.c, cong-node.h, cong-source-layout.c,
	cong-source-view.c, cong-stylesheet.c, cong-text-cache.c,
	cong-tree-view.c, cong-util.c, cong-util.h, cong-view.h,
	cong-xpath-expression.c, global.h, gxx-impl-object-to-xml-tree.c,
	gxx-object-from-xml-tree.h, gxx-object-to-xml-tree.h,
	plugin-arbitrary.c, plugin-convert-case.c, plugin-docbook.c,