@@ -121,6 +121,9 @@ cong_ui_hook_tree_convert_to_comment (CongDocument *doc,
 void
 cong_ui_hook_tree_convert_from_comment (CongDocument *doc,
 					GtkWindow *parent_window);
+void
+cong_ui_hook_tree_convert_from_entity_ref_to_copy  (CongDocument *doc,
+						    GtkWindow *parent_window);
 
 /** Legacy UI Hooks without clean marshalling (to be cleanup up eventually): **/
 
